--- a/app/templates/artists/user_profile.html
+++ b/app/templates/artists/user_profile.html
@@ -43,7 +43,11 @@
             {%else%}
             <div style="margin-top: 50px;"></div>
             {%endif%}
-              <div style="margin-left: auto; margin-right: auto;">
+            {%if loop.first%}
+              <div style="margin-left: auto; margin-right: auto; max-width: 1000px;">
+            {%else%}
+              <div style="margin-left: auto; margin-right: auto; max-width: 80%;">
+            {%endif%}
                 <div class="between">
                   {{gallery['name']}}
                   <div class="project"> 
@@ -60,7 +64,7 @@
                   {%endfor%}
                   </div>
                 </div>
-                <img  src="/static/imgs/ex.jpg" alt="exemple">
+                <img src="{{ url_for('static', filename=image.path_to_file)}}">
                 {{gallery['deadline']}}
               </div>
           </div>
