on peut maintenant cliquer sur l'image d''une galerie dans la page du profil afin d'atterir dans la page de la galerie

--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -68,7 +68,9 @@
                   {%endfor%}
                   </div>
                 </div>
-                <img src="{{ url_for('static', filename=image.path_to_file)}}">
+                <a href="{{ url_for('galleries.gallery', id_gallery=gallery.id_gallery, name=gallery.name) }}">
+                  <img src="{{ url_for('static', filename=image.path_to_file)}}">
+                </a>
                 {{gallery['deadline']}}
               </div>
           </div>
