desc est mtn opacité 1

--- a/app/templates/projects/project.html
+++ b/app/templates/projects/project.html
@@ -80,7 +80,7 @@ Projets en progrès
                 <div class="block column" style="width: 400px; margin-top: 0%;">
                     <div class="row">
                             <div class="box-black-huge">
-                                <h5 style="opacity: .5; width: 250px;">{{gallery['description']}}</h5>
+                                <h5 style="width: 250px;">{{gallery['description']}}</h5>
                             </div>
                         <div class="pp_container1" style="width: 50px; height: 50px; margin-left: 20px;">
                             {%if g.user['profile_pic'] is none%}
