--- a/app/templates/projects/projects.html
+++ b/app/templates/projects/projects.html
@@ -20,7 +20,7 @@ Projets en progrès
                         {%if gallery['description'] | trim == '' or gallery['description'] is none %}
                         <h5 style="opacity: .5; margin-left: 0px;">Description</h5>
                         {%else%}
-                        <h5 style="opacity: .5; margin-left: 0px;">{{gallery['description']}}</h5>
+                        <h5 style="margin-left: 0px;">{{gallery['description']}}</h5>
                         {%endif%}
                     </div>
                     <div class="column" style="margin-left: 10px;">
